test cobro por shopi}
